--- a/index.html
+++ b/index.html
@@ -5,18 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hannah Nixon Weather App</title>
-    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Hello World!</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-app">
+        <h1>San Francisco</h1>
+        <ul>
+          <li>Monday 12:00 pm</li>
+          <li>Sunny</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Sunny"
+            />
+            17°C | 62°F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Preciptation: 3%</li>
+              <li>Humidity: 74%</li>
+              <li>Wind: 18 km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a
+            href="https://github.com/hannahmnixon/sc-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Hannah Nixon</small
+        >
+      </div>
     </div>
     <script src="src/index.js"></script>
   </body>
