--- a/index.html
+++ b/index.html
@@ -15,26 +15,32 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>San Francisco</h1>
-        <ul>
-          <li>Monday 12:00 pm</li>
-          <li>Sunny</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Sunny"
-            />
-            17°C | 62°F
-          </div>
-          <div class="col-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>San Francisco</h1>
             <ul>
-              <li>Preciptation: 3%</li>
-              <li>Humidity: 74%</li>
-              <li>Wind: 18 km/h</li>
+              <li>Monday 12:00 pm</li>
+              <li>Sunny</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Sunny"
+                />
+                <span><strong></span>17</strong><small class="units">°C | °F</small></span>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Preciptation: 3%</li>
+                <li>Humidity: 74%</li>
+                <li>Wind: 18 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
