--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>San Francisco</h1>
+            <h1 id="city">San Francisco</h1>
             <ul>
               <li>Monday 12:00 pm</li>
-              <li>Sunny</li>
+              <li id="description">Sunny</li>
             </ul>
           </div>
           <div class="row">
@@ -32,14 +32,13 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                   alt="Sunny"
                 />
-                <span><strong></span>17</strong><small class="units">°C | °F</small></span>
+                <span><strong id="temperature"></span></strong><small class="units">°C | °F</small></span>
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Preciptation: 3%</li>
-                <li>Humidity: 74%</li>
-                <li>Wind: 18 km/h</li>
+                <li>Humidity: <span id="humidity"> %</span></li>
+                <li>Wind: <span id="wind">km/h</span></li>
               </ul>
             </div>
           </div>
