--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="overview">
             <h1 id="city">San Francisco</h1>
             <ul>
-              <li>Monday 12:00 pm</li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description">Sunny</li>
             </ul>
           </div>
