updated icon functionality

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="col-6">
               <div class="clearfix weather-temperature">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="Sunny"
+                  id="icon"
+                  alt=""
                 />
                 <span><strong id="temperature"></span></strong><small class="units">°C | °F</small></span>
               </div>
