added c/f links & conversion math

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   id="icon"
                   alt=""
                 />
-                <span><strong id="temperature"></span></strong><small class="units">°C | °F</small></span>
+                <span><strong id="temperature"></span></strong><small class="units"><a href="#" id="celcius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link" class="active">°F</a></small></span>
               </div>
             </div>
             <div class="col-6">
