--- a/index.html
+++ b/index.html
@@ -5,55 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hannah Nixon Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>  >
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    >
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <form id= "search-form" class="mb-3">
+          <form id="search-form" class="mb-4">
             <div class="row">
-              <div class="col-9">
-            <input type="search" 
-            placeholder="see another city" 
-            class="form-control"
-            id="city-input"
-            autocomplete="off"
-            />
-            </div>
-             <div class="col-3">
-            <input type="submit" value="search" class="btn btn-primary">
-            </div>
+              <div class="col-5">
+                <input
+                  type="search"
+                  placeholder="see another city"
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
             </div>
           </form>
           <div class="overview">
             <h1 id="city">San Francisco</h1>
             <ul>
               <li>Last updated: <span id="date"></span></li>
-              <li id="description">Sunny</li>
+              <li id="description" class="description">Sunny</li>
             </ul>
           </div>
           <div class="row">
             <div class="col-6">
               <div class="clearfix weather-temperature">
-                <img
-                  id="icon"
-                  alt=""
-                />
-                <span><strong id="temperature"></span></strong><small class="units"><a href="#" id="celcius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link" class="active">°F</a></small></span>
+                <img id="icon" alt="" />
+                <span
+                  ><strong id="temperature"></strong
+                  ><small class="units"
+                    ><a href="#" id="celcius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link" class="active"
+                      >°F</a
+                    ></small
+                  ></span
+                >
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"> %</span></li>
-                <li>Wind: <span id="wind">km/h</span></li>
+                <li class="moreInfo">
+                  Humidity: <span id="humidity"> %</span>
+                </li>
+                <li class="moreInfo">Wind: <span id="wind">km/h</span></li>
               </ul>
             </div>
           </div>
