--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thur</div>
+                <img
+                  src="http://openweathermap.org/img/wn/02d@2x.png"
+                  alt=""
+                  width="36px"
+                />
+                <br />
+                <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-high">18° | </span>
+                  <span class="weather-forecast-low">12°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a
