--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <form id="search-form" class="mb-4">
-            <div class="row">
+            <div class="row justify-content-end">
               <div class="col-5">
                 <input
                   type="search"
@@ -37,6 +37,7 @@
                 />
               </div>
             </div>
+            <div class="col-4">Right now in...</div>
           </form>
           <div class="overview">
             <h1 id="city">San Francisco</h1>
@@ -80,8 +81,8 @@
                 />
                 <br />
                 <div class="weather-forecast-temperatures">
-                  <span class="weather-forecast-high">18° | </span>
-                  <span class="weather-forecast-low">12°</span>
+                  <span class="weather-forecast-high" id="high">18° | </span>
+                  <span class="weather-forecast-low" id="low">12°</span>
                 </div>
               </div>
             </div>
